[tool.poetry]
name = "rlgatherer"
version = "0.1.0"
description = ""
authors = ["Alex Sun <alexsun82@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
praw = "^6.5"
parse = "^1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
